name:                lambda-racing
version:             0.1.0.0
synopsis:            Old school racing game
-- description:         
homepage:            https://github.com/marciofrayze/lambda-racing
license:             GPL-3
license-file:        LICENSE
author:              Marcio Frayze David
maintainer:          mfdavid@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable lambda-racing
  main-is:             src/Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.11, gloss==1.13.*
  -- hs-source-dirs:      
  default-language:    Haskell2010
